--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "passport-local": "^1.0.0",
     "password-hash-and-salt": "^0.1.4",
     "pg-promise": "^7.5.2",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "sweetalert": "^2.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.14.12"
